result now contains the SQL code
